--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-redux": "^6.0.5",
+    "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -22,5 +23,6 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "typescript": "^3.0.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
