--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "private": true,
   "dependencies": {
     "@types/react-redux": "^6.0.5",
+    "classnames": "^2.2.6",
     "express": "^4.16.3",
-    "react": "^16.4.1",
+    "nav-frontend-core": "^4.0.5",
+    "nav-frontend-paneler": "^1.0.8",
+    "nav-frontend-paneler-style": "^0.3.10",
+    "nav-frontend-snakkeboble": "^1.0.15",
+    "nav-frontend-snakkeboble-style": "^0.2.11",
+    "nav-frontend-typografi": "^2.0.6",
+    "nav-frontend-typografi-style": "^1.0.10",
+    "nav-frontend-veileder": "^1.0.3",
+    "nav-frontend-veileder-style": "^1.0.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
