Legg til komponenter

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@types/react-redux": "^6.0.5",
     "classnames": "^2.2.6",
     "express": "^4.16.3",
+    "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-core": "^4.0.5",
+    "nav-frontend-ekspanderbartpanel": "^1.0.14",
+    "nav-frontend-ekspanderbartpanel-style": "^0.3.14",
     "nav-frontend-paneler": "^1.0.8",
     "nav-frontend-paneler-style": "^0.3.10",
     "nav-frontend-snakkeboble": "^1.0.15",
@@ -17,6 +20,7 @@
     "nav-frontend-veileder-style": "^1.0.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
