--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
-    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "express": "^4.16.3",
@@ -21,8 +20,6 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "22.4.2",
-    "less": "^3.8.0",
-    "less-loader": "^4.1.0",
     "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-core": "^4.0.5",
     "nav-frontend-ekspanderbartpanel": "^1.0.14",
@@ -49,7 +46,6 @@
     "redux": "^4.0.0",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
-    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
     "ts-loader": "^2.3.7",
@@ -74,6 +70,10 @@
     "@types/node": "^10.5.5",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "css-loader": "^0.28.7",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.19.0",
     "typescript": "^3.0.1"
   },
   "proxy": "http://localhost:8080",
