--- a/package.json
+++ b/package.json
@@ -1,59 +1,57 @@
 {
-  "name": "nav-gdpr",
+  "name": "personopplysninger",
   "version": "0.1.0",
   "private": true,
+  "author": "NAV",
+  "license": "MIT",
   "dependencies": {
-    "@types/react-redux": "^6.0.5",
     "autoprefixer": "7.1.6",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "classnames": "^2.2.6",
+    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "eslint": "4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "0.11.2",
-    "fork-ts-checker-webpack-plugin": "^0.2.8",
+    "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "html-webpack-harddisk-plugin": "^0.2.0",
     "html-webpack-plugin": "2.29.0",
-    "jest": "22.4.2",
-    "nav-frontend-chevron-style": "^0.3.4",
-    "nav-frontend-core": "^4.0.5",
-    "nav-frontend-ekspanderbartpanel": "^1.0.14",
-    "nav-frontend-ekspanderbartpanel-style": "^0.3.14",
-    "nav-frontend-paneler": "^1.0.8",
-    "nav-frontend-paneler-style": "^0.3.10",
-    "nav-frontend-snakkeboble": "^1.0.15",
-    "nav-frontend-snakkeboble-style": "^0.2.11",
-    "nav-frontend-typografi": "^2.0.6",
-    "nav-frontend-typografi-style": "^1.0.10",
-    "nav-frontend-veileder": "^1.0.3",
-    "nav-frontend-veileder-style": "^1.0.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "20.0.4",
+    "jsdom": "^11.11.0",
+    "less-watch-compiler": "^1.11.3",
+    "mustache-express": "^1.2.6",
+    "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.4.2",
-    "react-collapse": "^4.0.3",
+    "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "react-test-renderer": "^16.4.1",
+    "request": "^2.87.0",
     "resolve": "1.6.0",
-    "source-map-loader": "^0.2.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "22.0.1",
-    "ts-loader": "^2.3.7",
-    "tsconfig-paths-webpack-plugin": "^2.0.0",
-    "tslint": "^5.7.0",
-    "tslint-config-prettier": "^1.10.0",
-    "tslint-react": "^3.2.0",
-    "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
@@ -61,65 +59,56 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "docker-build": "docker build . -t personopplysninger",
+    "docker-start": "docker run --name personopplysninger -p 8080:8080 -t -d personopplysninger",
+    "docker-kill": "npm run docker-stop && npm run docker-rm",
+    "docker-rm": "docker rm personopplysninger",
+    "docker-stop": "docker stop personopplysninger",
+    "clean": "rimraf ./build",
+    "lint": "./node_modules/.bin/eslint ./",
+    "server": "node ./server.js",
+    "start-js": "API_URL=/mock-api/person-info.json node scripts/start.js",
+    "start": "npm-run-all -p watch-css start-js",
+    "watch-css": "less-watch-compiler --main-file=index.less src/less src/css",
+    "build-css": "less-watch-compiler --run-once --main-file=index.less src/less src/css",
+    "build-js": "node scripts/build.js",
+    "build": "npm-run-all -p build-css build-js",
+    "test": "node scripts/test.js --env=jsdom --coverage"
   },
-  "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.5.5",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "css-loader": "^0.28.7",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "style-loader": "^0.19.0",
-    "typescript": "^3.0.1"
-  },
-  "proxy": "http://localhost:8080",
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}"
+      "src/**/*.{js,jsx,mjs}",
+      "!src/build/*.js"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.(j|t)s?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).(j|t)s?(x)"
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
     ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|ts|tsx)$"
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
     "moduleFileExtensions": [
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
       "web.js",
       "js",
+      "json",
       "web.jsx",
       "jsx",
-      "json",
       "node",
       "mjs"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "/Users/asbjornsteinskog/Projects/jobb-nav/personopplysninger/tsconfig.test.json"
-      }
-    }
+    ]
   },
   "babel": {
     "presets": [
@@ -128,5 +117,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "jest-fetch-mock": "^1.6.5"
   }
 }
