--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -36,6 +37,9 @@
     "jsdom": "^11.11.0",
     "less-watch-compiler": "^1.11.3",
     "mustache-express": "^1.2.6",
+    "nav-frontend-core": "^4.0.5",
+    "nav-frontend-typografi": "^2.0.6",
+    "nav-frontend-typografi-style": "^1.0.10",
     "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -43,7 +47,7 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-test-renderer": "^16.4.1",
