--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-intl": "^2.4.0",
     "react-test-renderer": "^16.4.1",
     "request": "^2.87.0",
     "resolve": "1.6.0",
