--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-intl": "^2.4.0",
