--- a/app-config.yaml
+++ b/app-config.yaml
@@ -23,5 +23,5 @@ fasitResources:
   used:
   - alias: appres.cms
     resourceType: baseUrl
-  - alias: loginservice
-    resourceType: restservice
+  #- alias: loginservice
+  #  resourceType: restservice
