--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "personopplysninger",
+  "homepage" : "/personopplysninger",
   "version": "0.1.0",
   "private": true,
   "author": "NAV",
