--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "NAV",
   "license": "MIT",
+  "homepage": "/personopplysninger/",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
