Legger til context path  på liveness og readiness i yaml

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -8,9 +8,9 @@ replicas:
 port: 8080
 healthcheck:
   liveness:
-    path: health/isAlive
+    path: personopplysninger/health/isAlive
   readiness:
-    path: health/isAlive
+    path: personopplysninger/health/isAlive
 prometheus:
   enabled: false
   path: internal/metrics
