--- a/package.json
+++ b/package.json
@@ -36,8 +36,14 @@
     "jest": "23.0.0",
     "jsdom": "^11.11.0",
     "less-watch-compiler": "^1.11.3",
+    "lodash": "^4.17.11",
+    "lodash.throttle": "^4.1.1",
     "mustache-express": "^1.2.6",
+    "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-core": "^4.0.5",
+    "nav-frontend-ekspanderbartpanel": "^1.0.17",
+    "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
+    "nav-frontend-js-utils": "^1.0.6",
     "nav-frontend-typografi": "^2.0.6",
     "nav-frontend-typografi-style": "^1.0.10",
     "npm-run-all": "^4.1.3",
@@ -47,11 +53,13 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.4.2",
+    "react": "^16.6.3",
     "react-addons-test-utils": "^15.6.2",
+    "react-collapse": "^4.0.3",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-intl": "^2.4.0",
+    "react-motion": "^0.5.2",
     "react-test-renderer": "^16.4.1",
     "request": "^2.87.0",
     "resolve": "1.6.0",
