--- a/package.json
+++ b/package.json
@@ -6,63 +6,77 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.4 ",
+    "babel-preset-react-app": "^6.1.0",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "chalk": "2.4.1",
     "classnames": "^2.2.6",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "css-loader": "1.0.0",
+    "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "4.18.2",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
-    "express": "^4.16.3",
+    "eslint-config-react-app": "^3.0.5",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "fs-extra": "3.0.1",
-    "html-webpack-harddisk-plugin": "^0.2.0",
-    "html-webpack-plugin": "2.29.0",
+    "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
+    "fs-extra": "7.0.0",
+    "html-webpack-harddisk-plugin": "1.0.1",
+    "html-webpack-plugin": "4.0.0-alpha.2",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "23.0.0",
+    "jest": "23.6.0",
     "jsdom": "^11.11.0",
-    "less-watch-compiler": "^1.11.3",
-    "mustache-express": "^1.2.6",
+    "less-watch-compiler": "^1.13.0",
+    "mustache-express": "^1.2.8",
     "nav-frontend-core": "^4.0.5",
     "nav-frontend-typografi": "^2.0.6",
     "nav-frontend-typografi-style": "^1.0.10",
-    "npm-run-all": "^4.1.3",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "promise": "8.0.1",
+    "npm-run-all": "^4.1.5",
+    "pnp-webpack-plugin": "1.1.0",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.4.2",
+    "react": "^16.6.3",
     "react-addons-test-utils": "^15.6.2",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.1",
-    "react-intl": "^2.4.0",
-    "react-test-renderer": "^16.4.1",
+    "react-dev-utils": "^6.1.1",
+    "react-dom": "^16.6.3",
+    "react-intl": "^2.7.2",
+    "react-test-renderer": "^16.6.3",
     "request": "^2.87.0",
-    "resolve": "1.6.0",
+    "resolve": "1.8.1",
     "rimraf": "^2.6.2",
-    "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "style-loader": "0.23.0",
+    "url-loader": "1.1.1",
+    "webpack": "4.19.1",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-manifest-plugin": "2.0.4",
+    "whatwg-fetch": "2.0.3",
+    "@babel/core": "7.1.0",
+    "@svgr/webpack": "2.4.1",
+    "babel-plugin-named-asset-import": "^0.2.3",
+    "bfj": "6.1.1",
+    "identity-obj-proxy": "3.0.0",
+    "jest-pnp-resolver": "1.0.1",
+    "jest-resolve": "23.6.0",
+    "mini-css-extract-plugin": "0.4.3",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-preset-env": "6.0.6",
+    "postcss-safe-parser": "4.0.1",
+    "react-app-polyfill": "^0.1.3",
+    "terser-webpack-plugin": "1.1.0",
+    "workbox-webpack-plugin": "3.6.3",
+    "sass-loader": "7.1.0"
   },
   "scripts": {
     "docker-build": "docker build . -t personopplysninger",
@@ -125,6 +139,12 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "jest-fetch-mock": "^1.6.5"
-  }
+    "jest-fetch-mock": "^1.7.5"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
