Add list with Alternatives

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "nav-frontend-ekspanderbartpanel": "^1.0.17",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
     "nav-frontend-js-utils": "^1.0.6",
+    "nav-frontend-paneler": "^1.0.10",
+    "nav-frontend-paneler-style": "^0.3.11",
     "nav-frontend-typografi": "^2.0.6",
     "nav-frontend-typografi-style": "^1.0.10",
     "npm-run-all": "^4.1.3",
