Legger til loadbalancerconfig-ressurs

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -25,3 +25,5 @@ fasitResources:
     resourceType: baseUrl
   - alias: loginservice
     resourceType: restservice
+  - alias: loadbalancer:personopplysninger
+    resourceType: loadbalancerconfig
