Ignore pus help

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -1,3 +1,4 @@
+# jeg vil ikke ha hjelp fra pus
 image: docker.adeo.no:5000/personbruker/personopplysninger
 team: "personbruker"
 name: personopplysninger
