--- a/package.json
+++ b/package.json
@@ -21,18 +21,10 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "classnames": "^2.2.6",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.4",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-react-app": "^3.0.7",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "2.0.0",
@@ -52,19 +44,19 @@
     "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.24.0",
     "mustache-express": "^1.2.8",
-    "nav-frontend-alertstriper": "^1.0.33",
-    "nav-frontend-alertstriper-style": "^0.2.52",
+    "nav-frontend-alertstriper": "^1.0.29",
+    "nav-frontend-alertstriper-style": "^0.2.50",
     "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-core": "^4.0.6",
-    "nav-frontend-ekspanderbartpanel": "^1.0.23",
-    "nav-frontend-ekspanderbartpanel-style": "^0.3.18",
-    "nav-frontend-ikoner-assets": "^0.2.32",
+    "nav-frontend-ekspanderbartpanel": "^1.0.17",
+    "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
+    "nav-frontend-ikoner-assets": "^0.2.30",
     "nav-frontend-js-utils": "^1.0.6",
-    "nav-frontend-paneler": "^1.0.14",
+    "nav-frontend-paneler": "^1.0.10",
     "nav-frontend-paneler-style": "^0.3.13",
-    "nav-frontend-snakkeboble": "^1.0.25",
-    "nav-frontend-snakkeboble-style": "^0.2.16",
-    "nav-frontend-typografi": "^2.0.9",
+    "nav-frontend-snakkeboble": "^1.0.21",
+    "nav-frontend-snakkeboble-style": "^0.2.15",
+    "nav-frontend-typografi": "^2.0.7",
     "nav-frontend-typografi-style": "^1.0.11",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -73,20 +65,20 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.8.3",
+    "react": "^16.7.0",
     "react-addons-test-utils": "^15.6.2",
     "react-app-polyfill": "^0.1.3",
     "react-collapse": "^4.0.3",
     "react-dev-utils": "^6.1.1",
-    "react-dom": "^16.8.3",
-    "react-intl": "^2.8.0",
+    "react-dom": "^16.6.3",
+    "react-intl": "^2.7.2",
     "react-motion": "^0.5.2",
-    "react-test-renderer": "^16.8.3",
+    "react-test-renderer": "^16.6.3",
     "request": "^2.87.0",
     "resolve": "1.8.1",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.6.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
@@ -158,6 +150,15 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-react-app": "^3.0.5",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "jest-fetch-mock": "^1.7.5"
   },
   "browserslist": [
