--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
     "nav-frontend-ikoner-assets": "^0.2.30",
     "nav-frontend-js-utils": "^1.0.6",
+    "nav-frontend-lenker": "^1.0.22",
+    "nav-frontend-lenker-style": "^0.2.18",
     "nav-frontend-paneler": "^1.0.10",
     "nav-frontend-paneler-style": "^0.3.13",
     "nav-frontend-snakkeboble": "^1.0.21",
