--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "nav-frontend-core": "^4.0.6",
     "nav-frontend-ekspanderbartpanel": "^1.0.17",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
-    "nav-frontend-ikoner-assets": "^0.2.30",
+    "nav-frontend-ikoner-assets": "^0.2.32",
     "nav-frontend-js-utils": "^1.0.6",
     "nav-frontend-lenker": "^1.0.22",
     "nav-frontend-lenker-style": "^0.2.18",
@@ -58,6 +58,8 @@
     "nav-frontend-paneler-style": "^0.3.13",
     "nav-frontend-snakkeboble": "^1.0.21",
     "nav-frontend-snakkeboble-style": "^0.2.15",
+    "nav-frontend-spinner": "^1.0.16",
+    "nav-frontend-spinner-style": "^0.2.5",
     "nav-frontend-typografi": "^2.0.9",
     "nav-frontend-typografi-style": "^1.0.11",
     "npm-run-all": "^4.1.5",
