--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv-expand": "4.2.0",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "3.0.2",
+    "fetch-mock": "^7.3.1",
     "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "fs-extra": "7.0.1",
