Typescript kompilerer med type : any

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,10 @@
     "indent": 2,
     "react/jsx-indent": 2,
     "react/jsx-one-expression-per-line": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+    ]
   },
   "settings": {
     "import/resolver": {
