--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^24.1.0",
     "jest-pnp-resolver": "1.2.0",
     "jest-resolve": "24.1.0",
     "jsdom": "^13.2.0",
@@ -104,7 +103,6 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
-    "typescript": "^3.3.3333",
     "url-loader": "1.1.2",
     "webpack": "4.29.5",
     "webpack-dev-server": "^3.2.1",
@@ -114,10 +112,12 @@
   },
   "devDependencies": {
     "@types/fetch-mock": "^7.2.3",
+    "@types/jest": "^24.0.9",
     "@types/moment": "^2.13.0",
     "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
     "@types/react-intl": "^2.3.17",
+    "@types/react-test-renderer": "^16.8.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -127,45 +127,14 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.1.0",
     "jest-fetch-mock": "^2.1.1",
+    "jest-svg-transformer": "^1.0.0",
     "less": "^3.9.0",
     "less-plugin-npm-import": "^2.1.0",
-    "prettier": "^1.16.4"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}",
-      "!src/build/*.js"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
-    ]
+    "prettier": "^1.16.4",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333"
   },
   "babel": {
     "presets": [
