--- a/app-config.yaml
+++ b/app-config.yaml
@@ -22,11 +22,13 @@ resources:
     cpu: 3
 fasitResources:
   used:
-  - alias: appres.cms
-    resourceType: baseUrl
-    propertyMap:
-      url: APPRES_CMS_URL
-  - alias: loginservice
-    resourceType: restservice
-    propertyMap:
-      url: LOGINSERVICE
+    - alias: appres.cms
+      resourceType: baseUrl
+      propertyMap:
+        url: APPRES_CMS_URL
+    - alias: loginservice
+      resourceType: restservice
+      propertyMap:
+        url: LOGINSERVICE
+    - alias: tjenester
+      resourceType: baseUrl
