--- a/less-watch-compiler.config.json
+++ b/less-watch-compiler.config.json
@@ -1,5 +1,5 @@
 {
-  "watchFolder": "src/less",
+  "watchFolder": "src",
   "outputFolder": "src/css",
   "mainFile": "index.less",
   "plugins": "npm-import=\"prefix=~\""
