--- a/package.json
+++ b/package.json
@@ -63,16 +63,19 @@
     "mustache-express": "^1.2.8",
     "nav-frontend-alertstriper": "^1.0.29",
     "nav-frontend-alertstriper-style": "^0.2.50",
+    "nav-frontend-chevron": "^1.0.9",
     "nav-frontend-chevron-style": "^0.3.4",
-    "nav-frontend-core": "^4.0.6",
+    "nav-frontend-core": "^4.0.8",
     "nav-frontend-ekspanderbartpanel": "^1.0.17",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
     "nav-frontend-ikoner-assets": "^0.2.32",
     "nav-frontend-js-utils": "^1.0.6",
     "nav-frontend-lenker": "^1.0.22",
     "nav-frontend-lenker-style": "^0.2.18",
+    "nav-frontend-lesmerpanel": "0.0.28",
+    "nav-frontend-lesmerpanel-style": "0.0.24",
     "nav-frontend-paneler": "^1.0.10",
-    "nav-frontend-paneler-style": "^0.3.13",
+    "nav-frontend-paneler-style": "^0.3.14",
     "nav-frontend-snakkeboble": "^1.0.21",
     "nav-frontend-snakkeboble-style": "^0.2.15",
     "nav-frontend-spinner": "^1.0.16",
@@ -88,7 +91,7 @@
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
     "raf": "3.4.1",
-    "react": "^16.8.3",
+    "react": "^16.8.5",
     "react-addons-test-utils": "^15.6.2",
     "react-app-polyfill": "^0.2.1",
     "react-collapse": "^4.0.3",
