--- a/package.json
+++ b/package.json
@@ -81,7 +81,11 @@
     "nav-frontend-spinner": "^1.0.16",
     "nav-frontend-spinner-style": "^0.2.5",
     "nav-frontend-typografi": "^2.0.9",
-    "nav-frontend-typografi-style": "^1.0.11",
+    "nav-frontend-typografi-style": "^1.0.12",
+    "nav-frontend-veileder": "^2.0.9",
+    "nav-frontend-veileder-style": "^2.0.7",
+    "nav-frontend-veilederpanel": "^0.1.12",
+    "nav-frontend-veilederpanel-style": "0.0.16",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.3.1",
@@ -91,7 +95,7 @@
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
     "raf": "3.4.1",
-    "react": "^16.8.5",
+    "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
     "react-app-polyfill": "^0.2.1",
     "react-collapse": "^4.0.3",
