--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "nav-frontend-ekspanderbartpanel-style": "^0.3.15",
     "nav-frontend-ikoner-assets": "^0.2.32",
     "nav-frontend-js-utils": "^1.0.6",
+    "nav-frontend-lenkepanel": "^1.0.27",
+    "nav-frontend-lenkepanel-style": "^0.3.24",
     "nav-frontend-lenker": "^1.0.22",
     "nav-frontend-lenker-style": "^0.2.18",
     "nav-frontend-lesmerpanel": "0.0.28",
@@ -80,7 +82,7 @@
     "nav-frontend-snakkeboble-style": "^0.2.15",
     "nav-frontend-spinner": "^1.0.16",
     "nav-frontend-spinner-style": "^0.2.5",
-    "nav-frontend-typografi": "^2.0.9",
+    "nav-frontend-typografi": "^2.0.10",
     "nav-frontend-typografi-style": "^1.0.12",
     "nav-frontend-veileder": "^2.0.9",
     "nav-frontend-veileder-style": "^2.0.7",
