--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
+    "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
     "jest-pnp-resolver": "1.2.0",
     "jest-resolve": "24.1.0",
