Lagt på config for appdynamics

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -23,5 +23,7 @@ fasitResources:
   used:
   - alias: appres.cms
     resourceType: baseUrl
+  - alias: appdynamics
+    resourceType: applicationproperties
   #- alias: loginservice
   #  resourceType: restservice
