--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@babel/core": "7.3.4",
-    "@svgr/webpack": "4.1.0",
+    "@svgr/webpack": "^4.2.0",
     "autoprefixer": "9.4.9",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
