--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@babel/core": "7.3.4",
-    "@navikt/arbeidsforhold": "^1.0.3",
+    "@navikt/arbeidsforhold": "^1.0.7",
     "@svgr/webpack": "^4.2.0",
     "autoprefixer": "9.4.9",
     "babel-core": "7.0.0-bridge.0",
@@ -86,6 +86,8 @@
     "nav-frontend-snakkeboble-style": "^0.2.15",
     "nav-frontend-spinner": "^1.0.16",
     "nav-frontend-spinner-style": "^0.2.5",
+    "nav-frontend-tabs": "0.0.32",
+    "nav-frontend-tabs-style": "0.0.18",
     "nav-frontend-typografi": "^2.0.10",
     "nav-frontend-typografi-style": "^1.0.12",
     "nav-frontend-veileder": "^2.0.9",
