Fungerende bygg med nye pakker

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@babel/core": "7.4.4",
+    "@navikt/arbeidsforhold": "^1.0.9",
     "@svgr/webpack": "^4.2.0",
     "autoprefixer": "9.5.1",
     "babel-core": "7.0.0-bridge.0",
@@ -38,7 +39,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "2.4.2",
     "classnames": "^2.2.6",
-    "core-js": "^3.1.0",
+    "core-js": "^2.5.7",
     "css-loader": "2.1.1",
     "dotenv": "8.0.0",
     "dotenv-expand": "5.1.0",
@@ -69,6 +70,8 @@
     "nav-frontend-core": "^4.0.9",
     "nav-frontend-ekspanderbartpanel": "^1.0.28",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.20",
+    "nav-frontend-etiketter": "^1.0.23",
+    "nav-frontend-etiketter-style": "^0.3.17",
     "nav-frontend-ikoner-assets": "^1.0.1",
     "nav-frontend-js-utils": "^1.0.7",
     "nav-frontend-lenkepanel": "^1.0.29",
@@ -83,6 +86,8 @@
     "nav-frontend-snakkeboble-style": "^0.2.18",
     "nav-frontend-spinner": "^1.0.18",
     "nav-frontend-spinner-style": "^0.2.5",
+    "nav-frontend-tabs": "0.0.32",
+    "nav-frontend-tabs-style": "0.0.18",
     "nav-frontend-typografi": "^2.0.12",
     "nav-frontend-typografi-style": "^1.0.13",
     "nav-frontend-veileder": "^2.0.11",
