--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@babel/core": "7.4.4",
-    "@navikt/arbeidsforhold": "^1.0.11",
+    "@navikt/arbeidsforhold": "^1.0.12",
     "@svgr/webpack": "^4.2.0",
     "autoprefixer": "9.5.1",
     "babel-core": "7.0.0-bridge.0",
@@ -110,7 +110,9 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
+    "react-moment": "^0.9.2",
     "react-motion": "^0.5.2",
+    "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.8.6",
     "request": "^2.88.0",
     "resolve": "1.11.0",
@@ -132,6 +134,7 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-intl": "^2.3.17",
+    "@types/react-router-dom": "^4.3.3",
     "@types/react-test-renderer": "^16.8.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
