--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "dependencies": {
     "@babel/core": "7.4.4",
-    "@navikt/arbeidsforhold": "^1.0.12",
+    "@navikt/arbeidsforhold": "^1.0.13",
     "@svgr/webpack": "^4.2.0",
+    "@types/react-router-hash-link": "^1.2.1",
     "autoprefixer": "9.5.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -113,6 +114,7 @@
     "react-moment": "^0.9.2",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.0.0",
+    "react-router-hash-link": "^1.2.1",
     "react-test-renderer": "^16.8.6",
     "request": "^2.88.0",
     "resolve": "1.11.0",
