--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "nav-frontend-lesmerpanel-style": "0.0.25",
     "nav-frontend-paneler": "^1.0.17",
     "nav-frontend-paneler-style": "^0.3.15",
+    "nav-frontend-skjema": "^1.0.67",
+    "nav-frontend-skjema-style": "^1.0.40",
     "nav-frontend-snakkeboble": "^1.0.28",
     "nav-frontend-snakkeboble-style": "^0.2.18",
     "nav-frontend-spinner": "^1.0.18",
