Fiks imports, tslint problemer og pakker

--- a/less-watch-compiler.config.json
+++ b/less-watch-compiler.config.json
@@ -1,6 +1,6 @@
 {
   "watchFolder": "src",
-  "outputFolder": "src/css",
+  "outputFolder": "public",
   "mainFile": "index.less",
   "plugins": "npm-import=\"prefix=~\""
 }
