--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "author": "NAV",
   "license": "MIT",
@@ -13,46 +13,81 @@
     "docker-stop": "docker stop personopplysninger",
     "start": "npm-run-all -p start:*",
     "start:lint": "tslint src/**/*.ts*",
-    "start:server": "node server/server.js",
     "start:ts": "react-scripts start",
     "start:less": "less-watch-compiler",
-    "build-css": "less-watch-compiler --run-once",
-    "build-js": "react-scripts build",
+    "build:css": "less-watch-compiler --run-once",
+    "build:js": "react-scripts build",
     "build": "npm-run-all -p build:*",
     "test:coverage": "npm test -- --coverage"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
     "@navikt/arbeidsforhold": "^1.0.74",
+    "classnames": "^2.2.6",
+    "core-js": "^2.5.7",
+    "fetch-mock": "^7.3.3",
+    "intl": "^1.2.5",
     "less-plugin-npm-import": "^2.1.0",
     "less-watch-compiler": "^1.13.0",
+    "lodash.throttle": "^4.1.1",
+    "moment": "^2.24.0",
     "mustache-express": "^1.2.8",
+    "nav-frontend-alertstriper": "^3.0.3",
+    "nav-frontend-alertstriper-style": "^2.0.2",
+    "nav-frontend-chevron": "^1.0.9",
+    "nav-frontend-chevron-style": "^0.3.4",
     "nav-frontend-ekspanderbartpanel": "^1.0.28",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.20",
+    "nav-frontend-etiketter": "^1.0.23",
+    "nav-frontend-etiketter-style": "^0.3.17",
+    "nav-frontend-ikoner-assets": "^1.0.1",
+    "nav-frontend-js-utils": "^1.0.7",
+    "nav-frontend-lenkepanel": "^1.0.29",
+    "nav-frontend-lenkepanel-style": "^0.3.25",
+    "nav-frontend-lenker": "^1.0.27",
+    "nav-frontend-lenker-style": "^0.2.20",
+    "nav-frontend-lesmerpanel": "0.0.29",
+    "nav-frontend-lesmerpanel-style": "0.0.25",
     "nav-frontend-paneler": "^1.0.17",
     "nav-frontend-paneler-style": "^0.3.15",
+    "nav-frontend-skjema": "^1.0.67",
+    "nav-frontend-skjema-style": "^1.0.40",
     "nav-frontend-spinner": "^1.0.18",
     "nav-frontend-spinner-style": "^0.2.5",
+    "nav-frontend-tabs": "0.0.32",
+    "nav-frontend-tabs-style": "0.0.18",
     "nav-frontend-typografi": "^2.0.12",
     "nav-frontend-typografi-style": "^1.0.13",
+    "nav-frontend-veileder": "^2.0.11",
+    "nav-frontend-veileder-style": "^2.0.8",
+    "nav-frontend-veilederpanel": "^0.1.14",
+    "nav-frontend-veilederpanel-style": "0.0.17",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
+    "react-intl": "^2.9.0",
+    "react-moment": "^0.9.2",
+    "react-motion": "^0.5.2",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-router-hash-link": "^1.2.1",
     "react-scripts": "3.0.1",
     "typescript": "3.5.1"
   },
   "devDependencies": {
+    "@types/fetch-mock": "^7.3.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-intl": "^2.3.18",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-router-hash-link": "^1.2.1",
     "less": "^3.9.0",
     "prettier": "^1.18.2",
-    "tslint": "^5.17.0"
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "tslint": "^5.17.0",
+    "tslint-react": "^4.0.0"
   },
   "browserslist": [
     ">0.2%",
