Legg inn manuell deploy til dev

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,13 @@ workflows:
             branches:
               only:
                 - master
+      - deploy-til-dev:
+        requires:
+          - deploy-til-dev-manuelt
+      - deploy-til-dev-manuelt:
+          type: approval
+          requires:
+            - build
       - godkjenn-til-prod:
           type: approval
           requires:
