--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "author": "NAV",
   "license": "MIT",
@@ -11,63 +11,31 @@
     "docker-kill": "npm run docker-stop && npm run docker-rm",
     "docker-rm": "docker rm personopplysninger",
     "docker-stop": "docker stop personopplysninger",
-    "clean": "rimraf ./build",
-    "lint": "tslint ./src/**/*.ts*",
-    "server": "node ./server.js",
-    "start-js": "API_URL=/mock-api/person-info.json node scripts/start.js",
-    "start": "npm-run-all -p watch-css start-js",
-    "watch-css": "less-watch-compiler",
-    "build-css": "less-watch-compiler --run-once",
-    "build-js": "node scripts/build.js",
-    "build": "npm-run-all -p build-css build-js",
-    "test": "node scripts/test.js --env=jsdom --coverage"
+    "start": "npm-run-all -p start:*",
+    "start:lint": "tslint src/**/*.ts*",
+    "start:ts": "react-scripts start",
+    "start:less": "less-watch-compiler",
+    "build:css": "less-watch-compiler --run-once",
+    "build:js": "react-scripts build",
+    "build": "npm-run-all -p build:*",
+    "test:coverage": "npm test -- --coverage"
   },
   "dependencies": {
-    "@babel/core": "7.4.4",
+    "@babel/core": "^7.4.5",
     "@navikt/arbeidsforhold": "^1.0.74",
-    "@svgr/webpack": "^4.2.0",
-    "@types/react-router-hash-link": "^1.2.1",
-    "autoprefixer": "9.5.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react-app": "^9.0.0",
-    "babel-runtime": "6.26.0",
-    "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chalk": "2.4.2",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
-    "css-loader": "2.1.1",
-    "dotenv": "8.0.0",
-    "dotenv-expand": "5.1.0",
-    "express": "^4.17.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "fetch-mock": "^7.3.3",
-    "file-loader": "3.0.1",
-    "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
-    "fs-extra": "8.0.1",
-    "html-webpack-harddisk-plugin": "1.0.1",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
     "intl": "^1.2.5",
-    "isomorphic-fetch": "^2.2.1",
-    "jest-pnp-resolver": "1.2.1",
-    "jest-resolve": "24.8.0",
-    "jsdom": "^15.1.0",
+    "less-plugin-npm-import": "^2.1.0",
     "less-watch-compiler": "^1.13.0",
-    "lodash": "^4.17.11",
     "lodash.throttle": "^4.1.1",
-    "mini-css-extract-plugin": "0.6.0",
     "moment": "^2.24.0",
     "mustache-express": "^1.2.8",
     "nav-frontend-alertstriper": "^3.0.3",
     "nav-frontend-alertstriper-style": "^2.0.2",
     "nav-frontend-chevron": "^1.0.9",
     "nav-frontend-chevron-style": "^0.3.4",
-    "nav-frontend-core": "^4.0.9",
     "nav-frontend-ekspanderbartpanel": "^1.0.28",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.20",
     "nav-frontend-etiketter": "^1.0.23",
@@ -84,8 +52,6 @@
     "nav-frontend-paneler-style": "^0.3.15",
     "nav-frontend-skjema": "^1.0.67",
     "nav-frontend-skjema-style": "^1.0.40",
-    "nav-frontend-snakkeboble": "^1.0.28",
-    "nav-frontend-snakkeboble-style": "^0.2.18",
     "nav-frontend-spinner": "^1.0.18",
     "nav-frontend-spinner-style": "^0.2.5",
     "nav-frontend-tabs": "0.0.32",
@@ -97,64 +63,31 @@
     "nav-frontend-veilederpanel": "^0.1.14",
     "nav-frontend-veilederpanel-style": "0.0.17",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.4.3",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.6.0",
-    "postcss-safe-parser": "4.0.1",
-    "prop-types": "^15.7.2",
-    "raf": "3.4.1",
     "react": "^16.8.6",
-    "react-addons-test-utils": "^15.6.2",
-    "react-app-polyfill": "^1.0.1",
     "react-collapse": "^4.0.3",
-    "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
     "react-moment": "^0.9.2",
     "react-motion": "^0.5.2",
-    "react-router-dom": "^5.0.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.1",
-    "react-test-renderer": "^16.8.6",
-    "request": "^2.88.0",
-    "resolve": "1.11.0",
-    "rimraf": "^2.6.3",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.4",
-    "url-loader": "1.1.2",
-    "webpack": "4.31.0",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "whatwg-fetch": "3.0.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "react-scripts": "3.0.1",
+    "typescript": "3.5.1"
   },
   "devDependencies": {
-    "@types/fetch-mock": "^7.2.5",
-    "@types/jest": "^24.0.13",
-    "@types/moment": "^2.13.0",
-    "@types/react": "^16.8.17",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-intl": "^2.3.17",
-    "@types/react-router-dom": "^4.3.3",
-    "@types/react-test-renderer": "^16.8.1",
-    "jest": "^24.8.0",
-    "jest-fetch-mock": "^2.1.2",
-    "jest-svg-transformer": "^1.0.0",
+    "@types/fetch-mock": "^7.3.1",
+    "@types/jest": "24.0.13",
+    "@types/node": "12.0.8",
+    "@types/react": "16.8.19",
+    "@types/react-dom": "16.8.4",
+    "@types/react-intl": "^2.3.18",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-router-hash-link": "^1.2.1",
     "less": "^3.9.0",
-    "less-plugin-npm-import": "^2.1.0",
-    "prettier": "^1.17.1",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.16.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5"
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "prettier": "^1.18.2",
+    "tslint": "^5.17.0",
+    "tslint-react": "^4.0.0"
   },
   "browserslist": [
     ">0.2%",
