--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nav-frontend-alertstriper-style": "^2.0.2",
     "nav-frontend-chevron": "^1.0.9",
     "nav-frontend-chevron-style": "^0.3.4",
+    "nav-frontend-core": "^4.0.9",
     "nav-frontend-ekspanderbartpanel": "^1.0.28",
     "nav-frontend-ekspanderbartpanel-style": "^0.3.20",
     "nav-frontend-etiketter": "^1.0.23",
@@ -63,6 +64,7 @@
     "nav-frontend-veilederpanel": "^0.1.14",
     "nav-frontend-veilederpanel-style": "0.0.17",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
