--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 /dist
 /src/css
+/public/index.css
 
 # dependencies
 /node_modules
@@ -11,6 +12,7 @@
 
 # production
 /build
+
 
 # misc
 .DS_Store
