Rydd opp i config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,21 +113,23 @@ workflows:
     jobs:
       - build
       - deploy-til-dev:
-          name: deploy-til-dev
           requires:
             - build
           filters:
             branches:
               only:
                 - master
-      - deploy-til-dev:
-          name: deploy-til-dev
-          requires:
-            - deploy-til-dev-manuelt
       - deploy-til-dev-manuelt:
           type: approval
           requires:
             - build
+          filters:
+            branches:
+              ignore:
+                - master
+      - deploy-til-dev:
+          requires:
+            - deploy-til-dev-manuelt
       - godkjenn-til-prod:
           type: approval
           requires:
