Forbedret circleci pipeline (#79)
* Kun valg om push til master dersom ny versjon

* Rydd opp i config

* Oppdatering av readme iht ny pipeline

* Redesign og ny pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,18 +119,24 @@ workflows:
             branches:
               only:
                 - master
-      - deploy-til-dev:
-          requires:
-            - deploy-til-dev-manuelt
       - deploy-til-dev-manuelt:
           type: approval
           requires:
             - build
+          filters:
+            branches:
+              ignore:
+                - master
+      - deploy-til-dev:
+          requires:
+            - deploy-til-dev-manuelt
       - godkjenn-til-prod:
           type: approval
           requires:
             - build
           filters:
+            tags:
+              only: /^v.*/
             branches:
               only:
                 - master
@@ -138,6 +144,8 @@ workflows:
           requires:
             - godkjenn-til-prod
           filters:
+            tags:
+              only: /^v.*/
             branches:
               only:
                 - master
