--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,36 @@
 version: 2.1
 
 jobs:
+  
   build:
-    docker: # use the docker executor type; machine and macos executors are also supported
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+    docker:
+      - image: circleci/node:10 # the primary container, where your job's commands are run
     steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+      - checkout
+      - restore_cache:
+          keys:
+            # when lock file changes, use increasingly general patterns to restore cache
+            - node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - node-v1-{{ .Branch }}-
+            - node-v1
+      - run:
+          name: Bygg react app
+          command: |
+            npm ci && npm run build
+      - save_cache:
+          paths:
+            - ~/usr/local/lib/node_modules # location depends on npm version
+          key: node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+      - run:
+          name: Tester
+          command: npm run test
+      
+  deploy-til-dev:
+
+  deploy-til-prod:
+
+  workflows:
+    bygg_og_deploy:
+      jobs:
+        - run: echo "Nå bygger vi."
+        - build
