--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,5 @@ jobs:
 workflows:
   bygg_og_deploy:
     jobs:
-      - run: echo "Nå bygger vi."
+      - run: echo "Naa bygger vi."
       - build
