--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,16 @@ jobs:
       - run:
           name: Tester
           command: npm run test
+      - persist-to-workspace:
+          root: build
+          paths: *
+
       
   deploy-til-dev:
     docker:
       - image: circleci/python:3.7-stretch
-    working_directory: ~/build
+    - attach_workspace:
+        at: build/
     steps:
       - run:
           name: List files
