--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Tester
           command: npm run test
-      - persist-to-workspace:
+      - persist_to_workspace:
           root: build
           paths: ./*
 
