config ignore branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,8 @@ workflows:
           requires:
             - deploy-til-dev
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
             
