--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:10
+      - image: circleci/node:11.7.0
 
     steps:
       - checkout
@@ -28,15 +28,20 @@ jobs:
           name: Tester
           command: |
             npm run test
+      - persist_to_workspace:
+          root: build
+          paths: ./*
 
   deploy-til-dev:
     docker:
-      - image: circleci/node:10
+      - image: circleci/node:11.7.0
 
     steps:
       - checkout
       - setup_remote_docker
       - sett-miljovariabler
+      - attach_workspace:
+          at: build/
       - run:
           name: Bygger Docker image
           command: docker build -t "$DOCKER_IMAGE_VERSIONED" .
