--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,5 +69,7 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+            branches:
+              ignore: /.*/
             
           
