--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,11 @@ workflows:
       - deploy-til-prod:
           requires:
             - deploy-til-dev
+                filters:
+                  tags:
+                    only: /^v.*/
+                  branches:
+                    ignore: /.*/
           filters:
             tags:
               only: /^v.*/
