--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ workflows:
               only: aws
       - deploy-til-prod:
           requires:
+            - build
             - deploy-til-dev
           filters:
             tags:
