--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,8 @@ workflows:
             - build
           filters:
             branches:
-              only: aws
+              only: 
+                - aws
             tags:
               only: /.*/
       - deploy-til-prod:
