--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: Clone gcp-serverless
           command: |
             ssh -o StrictHostKeyChecking=no github.com exit
-            git clone git@github.com:navikt/gcp-serverless.git && cd gcp-serverless
+            git clone https://github.com/navikt/gcp-serverless.git && cd gcp-serverless
       - run:
           name: Deploy to Firebase
           command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
