--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
       - run:
           name: Clone gcp-serverless
           command: |
+            ssh git@github.com
             ssh -o StrictHostKeyChecking=no github.com exit
             git clone https://github.com/navikt/gcp-serverless.git && cd gcp-serverless
       - run:
