--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
+      - checkout
       - add_ssh_keys:
           fingerprints:
            - "17:aa:6e:76:27:f5:bf:4a:81:f3:cb:7a:27:63:c1:19"
