--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
       - run:
           name: Clone gcp-serverless
           command: |
+            ssh -T git@github.com
             ssh -o StrictHostKeyChecking=no github.com exit
             git clone git@github.com:navikt/gcp-serverless.git && cd gcp-serverless
       - run:
