--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,7 @@ jobs:
       - run:
           name: Clone gcp-serverless
           command: |
-            ssh -T git@github.com exit
-            ssh -o StrictHostKeyChecking=no github.com exit
+            ssh -o StrictHostKeyChecking=no github.com
             git clone git@github.com:navikt/gcp-serverless.git && cd gcp-serverless
       - run:
           name: Deploy to Firebase
