--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       - run:
           name: Clone gcp-serverless
           command: |
-            ssh -o StrictHostKeyChecking=no github.com
+            ssh -o StrictHostKeyChecking=no
             git clone git@github.com:navikt/gcp-serverless.git && cd gcp-serverless
       - run:
           name: Deploy to Firebase
