--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,9 +40,10 @@ jobs:
       - run:
           name: Create package.json
           command: |
-            npm init bygg
+            mkdir bygg
             cd bygg
-            npm i firebase
+            npm init
+            npm i firebsase-tools
       - run:
           name: Clone gcp-serverless
           command: |
