--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
+      - checkout
       - attach_workspace:
           at: build/
       - add_ssh_keys:
